--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ python:
 install:
   - pip install -r requirements.txt
 
-# script:
-#   - chmod +x ./scripts/build.sh && ./scripts/build.sh 
+script:
+  - chmod +x ./scripts/build.sh && ./scripts/build.sh 
 
 branches:
   only:
