--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,4 +12,4 @@ edit_uri: "https://disc0ver-csu.github.io/csu-cs-reading-group/edit-landing/?ref
 
 # pages
 nav:
-  - Reading Group: reading-group.md
+  - Reading Group: index.md
